message preview overflow fix

--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -1824,6 +1824,7 @@
             display: -webkit-box;
             overflow: hidden;
             -webkit-box-orient: vertical;
+            -webkit-line-clamp: 4;
             text-overflow: ellipsis;
         }
 
